--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "limitless-chatbot",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "openai": "^4.0.0",
-    "dotenv": "^16.0.0"
+    "express": "^4.19.0",
+    "dotenv": "^16.4.0",
+    "openai": "^4.0.0"
   }
 }
