--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "dotenv": "^16.4.5",
+    "openai": "^4.73.0"
   }
 }
