Update Node.js engine version and add node-fetch

--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": ">=18"
+    "node": "22.x"
   },
   "dependencies": {
     "express": "^4.19.2",
-    "openai": "^4.73.0"
+    "openai": "^4.73.0",
+    "node-fetch": "^3.3.2"
   }
 }
