--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "limitless-chatbot",
+  "name": "limitless-ai-backend",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js"
-  },
-  "engines": {
-    "node": "22.x"
+    "start": "node src/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "openai": "^4.73.0",
-    "node-fetch": "^3.3.2"
+    "openai": "^4.73.0"
   }
 }
